--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#skill">Skill</a></li>
             <li><a href="#bahasa">Bahasa</a></li>
-            <li><a href="/game/index.html">Game</a></li>
+            <li><a href="/ronx38/game/index.html">Game</a></li>
         </ul>
     
 </nav>
