--- a/game/index.html
+++ b/game/index.html
@@ -14,8 +14,8 @@
         <a href="https://jochrist21.github.io/index.html" class="btn btn-info" role="button">Home</a>
         <h1>ini adalah halaman web games </h1>
             <ul>
-                <li><a href=breakoutgame.html>BreakOut Game</a></li>
-                <li><a href=/game/mobil-mobilan/index.html>Mobil-Mobilan</a></li>
+                <li><a href=/ronx38/game/breakoutgame.html>BreakOut Game</a></li>
+                <li><a href=/ronx38/game/mobil-mobilan/index.html>Mobil-Mobilan</a></li>
             </ul>
     </body>
 </html>
