--- a/game/index.html
+++ b/game/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="container">
-        <a href="https://jochrist21.github.io/index.html" class="btn btn-info" role="button">Home</a>
+        <a href="https://ronaldsyl26.github.io/ronx38/" class="btn btn-info" role="button">Home</a>
         <h1>ini adalah halaman web games </h1>
             <ul>
                 <li><a href=/ronx38/game/breakoutgame.html>BreakOut Game</a></li>
